syntax="proto3";
package com.person.grpc;

option java_package="com.grpc.proto";
option java_outer_classname="Student";
option java_multiple_files=true;

service StudentService  {

rpc getRealNameByUsername(MyRequest) returns (MyResponse){}
rpc ListStudents(stream MyRequest) returns (stream MyResponse) {}
}

message MyRequest {
    string username = 1;
}

message MyResponse{
    string realname =2;
}

